fixed unaligned css and .hover colors, fixed illegal class under <li> element

--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
 ul {
-    list-style-type: none;
+
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -18,9 +18,6 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
-    background-color: #111;
-}
  .active {
      background-color: #4CAF50;
 }
@@ -44,8 +41,8 @@ li a, .dropbtn {
     text-decoration: none;
 }
 
-.dropdown li a:hover, .dropdown:hover .dropbtn {
-    background-color: lightpink;
+.dropdown hover, .dropbtn {
+    background-color: white;
 }
 .dropbtn:hover {
     background-color: lightpink;
@@ -69,8 +66,8 @@ li input {
    -webkit-border-radius: 5px;
  }
 
-li.dropdown {
-    display: inline-block;
+.dropdown {
+    display: inline-flex;
 }
 
 .dropdown-content {
