--- a/deprecated/css/nav.css
+++ b/deprecated/css/nav.css
@@ -38,7 +38,7 @@ li {
 
 li a, .dropbtn {
     display: inline-block;
-    color: grey;
+    color: blue;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
